tests/cli_config.t
$ atr dev env
ATR_CLIENT_CONFIG_PATH="<!CONFIG_PATH!>"
<!...!>

! atr config file
<!stderr!>
No configuration file found.
